# Decision-Making-for-Autonomous-Robots

./: .gitignore  README.md  mima.txt  token
quiz_files/Ontology/: quiz2.owl
quiz_files/Prolog/: quiz.pl
src/final_project/: README.md  package.xml  requirements.txt
src/final_project/launch/: gazebo_ssy236.launch  reasoning.launch
src/final_project/owl/: ssy236Ontology.owl
src/final_project/prolog/: decision_utils.pl  init.pl  reasoning_utils.pl
src/final_project/src/: direct_percept_node.cpp  knowledge_node.cpp  learning_node.cpp  map_generator_node.cpp  old_learning_node.cpp  percept_node.cpp  reasoning_node.cpp  tiago_control_node.cpp  yolo_node.py
src/final_project/srv/: GetSceneObjectList.srv
src/knowrob_tutorial/: CMakeLists.txt  README.md  package.xml
src/knowrob_tutorial/launch/: knowrob_tutorial.launch
src/knowrob_tutorial/owl/: ssy236Ontology.owl
src/knowrob_tutorial/prolog/: init.pl  instance_utils.pl  my_predicates.pl
src/knowrob_tutorial/src/: test_query.cpp
src/navigation_pkg/: CMakeLists.txt  package.xml
src/navigation_pkg/src/: navi_node.cpp  navi_subscriber.cpp
src/test_pkg/: CMakeLists.txt  package.xml
src/world_percept_assig/: CMakeLists.txt  README.md  package.xml
src/world_percept_assig/launch/: gazebo_ssy236.launch
src/world_percept_assig/src/: direct_percept_node.cpp  (+2 more)
src/world_percept_assig3/: CMakeLists.txt  README.md  package.xml
src/world_percept_assig4/: CMakeLists.txt  README.md  package.xml
src/world_percept_assig4_old/: CMakeLists.txt
src/xuezhang/: CMakeLists.txt  README.md  package.xml
(+47 files in other folders)
