<?xml version="1.0"?>
<package format="2">
  <name>navigation_pkg</name>
  <version>0.0.0</version>
  <description>The navigation_pkg package</description>

  <maintainer email="xinzhun@student.chalmers.se">xinzhu</maintainer>
  <maintainer email="dianw@student.chalmers.se">dian</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/navigation_pkg</url> -->
  <!-- <author email="xinzhun@student.chalmers.se">Xinzhu Niu</author> -->
  <!-- <author email="dianw@student.chalmers.se">Dian Wang</author> -->
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
